<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentBackground"
    tools:context=".ui.TrackingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="678dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="30dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondary">

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp" />
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/timerText"
                android:layout_width="394dp"
                android:layout_height="40dp"
                android:layout_marginTop="28dp"
                android:text="@string/initial_time"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/finishButton"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorSecondary"
                android:text="@string/finish"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/startToggleButton" />

            <Button
                android:id="@+id/startToggleButton"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorSecondary"
                android:backgroundTintMode="add"
                android:text="@string/start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timerText" />

            <Button
                android:id="@+id/startService"
                android:layout_width="142dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorSecondary"
                android:backgroundTintMode="add"
                android:text="@string/create_run"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timerText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</FrameLayout>