<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentBackground"
    tools:context=".ui.RunSummaryFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:layout_marginBottom="20px"
                android:background="@color/colorSecondary"
                android:text="RUN PATH"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgPlaceholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:layout_marginBottom="20px"
                android:background="@color/colorSecondary"
                android:text="STATISTICS"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shadow"
                android:orientation="vertical"
                android:paddingLeft="20px"
                android:paddingTop="10px"
                android:paddingRight="20px"
                android:paddingBottom="10px">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5px"
                    android:background="@color/darkgrey"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/itemDate"
                        android:layout_width="59dp"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorSecondary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/itemDatePlaceholder"
                        android:layout_width="129dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/itemClock"
                        android:layout_width="31dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/time"
                        android:textColor="@color/colorSecondary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/itemClockPlaceholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/itemTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/duration"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/itemTimePlaceholder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/black"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/itemSpeed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/speed"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/itemSpeedPlaceholder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/black"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/itemDistance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/distance"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/itemDistancePlaceholder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/black"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/itemCalories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/calories_burned"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/itemCaloriesPlaceholder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/black"
                            android:textSize="12sp" />
                    </LinearLayout>

                </LinearLayout>


                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pieChartStillTime"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_margin="10dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:layout_marginBottom="20px"
                android:background="@color/colorSecondary"
                android:text="ADDITIONAL"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:background="@color/darkgrey">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20px">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="111dp"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/descriptionText"
                        android:layout_width="281dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:textColor="@color/colorSecondary" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/lightgrey"
                    android:padding="20px">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="111dp"
                        android:layout_height="wrap_content"
                        android:text="@string/difficulty"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:progressBackgroundTint="@color/cardview_shadow_start_color"
                        android:progressTint="@color/colorSecondary"
                        android:secondaryProgressTint="@color/colorSecondary" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20px">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weather"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/weatherSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="50px"
                        android:background="@color/black"
                        android:entries="@array/weather_options" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightgrey"
                    android:padding="20px">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attach"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/addImage"
                            android:layout_width="114dp"
                            android:layout_height="37dp"
                            android:layout_marginLeft="50px"
                            android:backgroundTint="@color/black"
                            android:text="@string/attach_photos" />

                        <GridView
                            android:id="@+id/gridView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:columnWidth="90dp"
                            android:horizontalSpacing="10dp"
                            android:numColumns="auto_fit"
                            android:stretchMode="columnWidth"

                            android:verticalSpacing="10dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/button" />

                    </LinearLayout>

                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="123dp"
        android:layout_height="49dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/success"
        android:text="@string/save_run"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorSecondary"
        android:text="@string/delete_run"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>